Fixed overlapping videos on headers?

--- a/app/styles/netsafe.scss
+++ b/app/styles/netsafe.scss
@@ -56,6 +56,7 @@ a:hover {
   height: 90%;
   width: 100%;
   margin: 0 auto;
+  margin-top: 30px;
 }
 
 .container {
